[package]
name = "mixvec-derive"
version = "0.1.0"
edition = "2021"

[lib]
name = "mixvec_derive"
path = "src/lib.rs"
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.27"
